Path to lib should be absolute.

--- a/book/build.xml
+++ b/book/build.xml
@@ -13,7 +13,7 @@
 <project name="org.eclipse.mylyn.docs.epub.ui.docs" default="plugin-book">
 	
 	<!-- Location of Mylyn Docs -->
-    <property name="mylyn-docs" location="${basedir}/../../org.eclipse.mylyn.docs"/>
+	<property name="mylyn-docs" location="${basedir}/../../org.eclipse.mylyn.docs"/>
 	<available file="${mylyn-docs}" type="dir" property="dev.present"/>
 
 	<!-- Location of the EPUB source content -->
@@ -23,7 +23,7 @@
 	<property name="bookdir" location="${basedir}" />
 	
 	<!-- Location of the finished EPUB -->
-	<property name="epubfile" location="${basedir}/Building_EPUBs.epub" />
+	<property name="epubfile" location="Building EPUBs.epub" />
 
 	<path id="classpath">
 		<pathelement location="${mylyn-docs}/org.eclipse.mylyn.wikitext.core/target/classes"/>
@@ -35,7 +35,7 @@
 	<!-- Load the EPUB task from the library unless Eclipse is running -->
 	<target name="setup-lib" unless="dev.present">
 		<path id="lib-classpath">
-			<fileset dir="../lib/" includes="*.jar"/>
+			<fileset dir="${basedir}/../lib/" includes="*.jar"/>
 		</path>
 		<taskdef resource="org/eclipse/mylyn/docs/epub/ant/tasks.properties" classpathref="lib-classpath"/>
 	</target>
@@ -45,7 +45,7 @@
 		<path id="dev-classpath">
 			<pathelement location="${mylyn-docs}/org.eclipse.mylyn.docs.epub.ant.core/bin"/>
 			<pathelement location="${mylyn-docs}/org.eclipse.mylyn.docs.epub.core/bin"/>
-			<fileset dir="../lib/" includes="*.jar"/>
+			<fileset dir="${basedir}/../lib/" includes="*.jar"/>
 		</path>
 		<taskdef resource="org/eclipse/mylyn/docs/epub/ant/tasks.properties" classpathref="dev-classpath"/>
 	</target>
