--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src-java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.emf.common_2.7.0.v20120127-1122.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.emf.ecore_2.7.0.v20120127-1122.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.emf.ecore.xmi_2.7.0.v20120127-1122.jar"/>
 	<classpathentry kind="lib" path="lib/epub-ant.jar"/>
-	<classpathentry kind="lib" path="lib/org.eclipse.mylyn.docs.epub.core_1.0.0.v20120612-0600.jar" sourcepath="lib/org.eclipse.mylyn.docs.epub.core.source_1.0.0.v20120612-0600.jar"/>
+	<classpathentry kind="lib" path="lib/org.apache.tika.core_1.3.0.v201304160510.jar"/>
+	<classpathentry kind="lib" path="lib/org.apache.tika.parsers_1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.mylyn.docs.epub.core_2.0.0.v20140326-1000.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.mylyn.docs.epub.core.source_2.0.0.v20140326-1000.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
